--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,13 @@ Authors@R:
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: What license it uses
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Imports: 
+    dplyr,
+    rio,
+    gh,
+    ggplot2,
+    magrittr
+RoxygenNote: 7.0.2
