--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(get_gh_commits)
 export(get_gh_repos)
 export(get_lms_prefix)
 export(get_lms_unique_submission)
+export(get_stud_id_from_repository)
 export(get_students_data)
+export(list_files)
 export(parse_lms_filenames)
 export(separate_lms_grain_chaff)
 export(translit)
